kubernetes/apps/selfhosted/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - cloud.davidstewen.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
#      filters:
#        - &hsts
#          type: ResponseHeaderModifier
#          responseHeaderModifier:
#            add:
#              - name: strict-transport-security
#                value: max-age=31536000
